[gd_scene load_steps=22 format=3 uid="uid://bxew4jfnbdkni"]

[ext_resource type="Texture2D" uid="uid://blersput1g3jq" path="res://Sprite/cartoon-illustration-empty-room-with-window-dresser-generative-ai_958108-56141.png" id="1_6b8cd"]
[ext_resource type="Script" uid="uid://pe0x6smapvqy" path="res://Scripts/wardrobe.gd" id="1_flhbc"]
[ext_resource type="Texture2D" uid="uid://bpf0yrnbk1d4w" path="res://Sprite/GUI/hat-svgrepo-com.svg" id="3_3nq5o"]
[ext_resource type="StyleBox" uid="uid://de8tfguaqm7oi" path="res://Styles/wardrobe_button.tres" id="3_b1x2a"]
[ext_resource type="StyleBox" uid="uid://dhfexulbx8e5c" path="res://Styles/button_wardrobe_pressed.tres" id="3_xq1c6"]
[ext_resource type="StyleBox" uid="uid://c0wobnpece7c5" path="res://Styles/button_wardrobe.tres" id="4_02mfq"]
[ext_resource type="Texture2D" uid="uid://blety384fidou" path="res://Sprite/GUI/tshirt-t-shirt-svgrepo-com.svg" id="4_5uffa"]
[ext_resource type="Texture2D" uid="uid://cf2umts6nlped" path="res://Sprite/GUI/next-svgrepo-com (4).svg" id="4_cste4"]
[ext_resource type="Texture2D" uid="uid://b5ice2x4m76dg" path="res://Sprite/GUI/back-svgrepo-com.svg" id="4_dskkv"]
[ext_resource type="AudioStream" uid="uid://4jjrl5sqnfsa" path="res://Audio/Toy Making.mp3" id="4_g5gow"]
[ext_resource type="Texture2D" uid="uid://cw45aks6rpg6n" path="res://Sprite/GUI/shoe-8-svgrepo-com.svg" id="5_xq1c6"]
[ext_resource type="Texture2D" uid="uid://bynu4dksu511a" path="res://Sprite/GUI/previous-svgrepo-com.svg" id="10_02mfq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5gow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1x2a"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_g5gow"]
font_names = PackedStringArray("Moodcake")

[sub_resource type="Theme" id="Theme_b1x2a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02mfq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5gow"]
bg_color = Color(0.815686, 0.517647, 0.321569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.658824, 0.384314, 0.192157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Animation" id="Animation_g5gow"]
length = 0.001

[sub_resource type="Animation" id="Animation_b1x2a"]
resource_name = "select"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cste4"]
_data = {
&"RESET": SubResource("Animation_g5gow"),
&"select": SubResource("Animation_b1x2a")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flhbc")
metadata/_edit_horizontal_guides_ = [192.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6b8cd")

[node name="UI" type="CanvasLayer" parent="."]

[node name="hat_button" type="Button" parent="UI"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -302.0
offset_right = -37.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.68)
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5gow")
theme_override_styles/hover = ExtResource("3_xq1c6")
theme_override_styles/pressed = ExtResource("3_xq1c6")
theme_override_styles/normal = ExtResource("4_02mfq")
toggle_mode = true
icon = ExtResource("3_3nq5o")
icon_alignment = 1
expand_icon = true

[node name="dress_button" type="Button" parent="UI"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -250.0
offset_right = 69.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.68)
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5gow")
theme_override_styles/hover = ExtResource("3_xq1c6")
theme_override_styles/pressed = ExtResource("3_xq1c6")
theme_override_styles/normal = ExtResource("4_02mfq")
toggle_mode = true
icon = ExtResource("4_5uffa")
icon_alignment = 1
expand_icon = true

[node name="boots_button" type="Button" parent="UI"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -302.0
offset_right = 175.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.68)
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5gow")
theme_override_styles/hover = ExtResource("3_xq1c6")
theme_override_styles/pressed = ExtResource("3_xq1c6")
theme_override_styles/normal = ExtResource("4_02mfq")
toggle_mode = true
icon = ExtResource("5_xq1c6")
icon_alignment = 1
expand_icon = true

[node name="back_button" type="Button" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -404.0
offset_right = -105.0
offset_bottom = -332.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.68)
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5gow")
theme_override_styles/hover = ExtResource("3_b1x2a")
theme_override_styles/pressed = ExtResource("3_b1x2a")
theme_override_styles/normal = ExtResource("3_b1x2a")
icon = ExtResource("4_dskkv")
icon_alignment = 1

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -177.0
offset_top = -153.0
offset_right = 177.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(177.173, 90)
theme_override_styles/panel = SubResource("StyleBoxFlat_b1x2a")

[node name="outfit_identification" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_top = -47.0
offset_right = 174.0
offset_bottom = -14.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.2693, 0.0862632, 0.310763, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_g5gow")
theme_override_font_sizes/font_size = 30
text = "Head"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="BoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -84.5
offset_right = 154.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_b1x2a")
theme_override_constants/separation = 4
alignment = 1
vertical = true

[node name="Label" type="Label" parent="UI/Panel/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.2693, 0.0862632, 0.310763, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_g5gow")
theme_override_font_sizes/font_size = 30
text = "TOP HAT "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/Menu"]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="prev_button" type="Button" parent="UI/Panel/Menu/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_02mfq")
icon = ExtResource("10_02mfq")
flat = true
icon_alignment = 1

[node name="apply_outfit" type="Button" parent="UI/Panel/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_g5gow")
text = "Apply Outift"

[node name="next_button" type="Button" parent="UI/Panel/Menu/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_02mfq")
icon = ExtResource("4_cste4")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cste4")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_g5gow")
